flux/clusters/infrastructure/base/influxdb/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-tailscale
  namespace: influxdb
  annotations:
    tailscale.com/hostname: influxdb-tcp
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: influxdb2
  ports:
  - name: influxdb
    port: 443
    targetPort: 8086
    protocol: TCP
