flux/clusters/infrastructure/base/influxdb/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: tailscale
  namespace: influxdb
spec:
  gatewayClassName: tailscale
  listeners:
  - hostname: influxdb
    name: influxdb-http
    port: 80
    protocol: HTTP
  - hostname: influxdb
    name: influxdb-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: influxdb
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: influxdb-influxdb
  namespace: influxdb
spec:
  hostnames:
  - influxdb
  parentRefs:
  - name: tailscale
    port: 443
  rules:
  - backendRefs:
    - name: influxdb2
      port: 8086
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: influxdb-influxdb-http
  namespace: influxdb
spec:
  hostnames:
  - influxdb
  parentRefs:
  - name: tailscale
    port: 80
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 308
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
